Reviewed facade input (#2)
* reviewed facade input

* composite input tests